--- a/lab08/skills.html
+++ b/lab08/skills.html
@@ -10,6 +10,8 @@
         th {
             border: 1px solid black;
         }
+
+        .evenrow {background-color: #E6D5B8;}
     </style>
     <link rel="stylesheet" href="styles2.css">
 </head>
