--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -10,6 +10,22 @@
         th {
             border: 1px solid black;
         }
+
+        .evenrow {
+            background-color: #E6D5B8;
+        }
+
+        h1 {
+            text-align: center;
+        }
+
+        .iconrow {display: flex;}
+
+        .other{background-color: #E6D5B8;
+        border: 2px solid #F0A500;
+        border-radius: 5px;}
+
+
     </style>
     <link rel="stylesheet" href="styles2.css">
 </head>
@@ -18,6 +34,39 @@
     <nav></nav>
 
     <h1>Skills</h1>
+
+    <div class="iconrow">
+        <div><p>HTML</p><br>
+            <img src="html.png" alt="html icon" width="50">
+        </div>
+        <div><p>Java</p><br>
+            <img src="java.png" alt="java icon" width="50">
+        </div>
+        <div><p>macOS</p><br>
+            <img src="macOS.png" alt="macOS icon" width="50"></div>
+        <div><p>Excel</p><br>
+            <img src="excel.png" alt="excel icon" width="50">
+        </div>
+        <div><p>Video</p><br>
+            <img src="video.png" alt="video icon" width="50">
+        </div>
+    </div>
+
+    <aside class="other">
+        <h2>Other Skills</h2>
+        <p>Pyton</p>
+        <p>SQL</p>
+        <p>Windows</p>
+        <p>Statistics/Probability</p>
+    </aside>
+
+    <div class="otherrow">
+        <div></div>
+        <div></div>
+    </div>
+
+    <p>Below shows a variety of my skills seperated by categories. They range from knowledge of coding languages,
+        operating systems, MS Office, math, and videos. My compentancy level for each skill is listed on the right.</p>
     <table>
         <caption>Technical Skills</caption>
         <tr>
@@ -28,7 +77,7 @@
         <tr class="evenrow">
             <td>Coding</td>
             <td>HTML</td>
-            <td>Accomplished</td>
+            <td>Capable</td>
         </tr>
         <tr>
             <td>Coding</td>
@@ -57,7 +106,7 @@
         </tr>
         <tr class="evenrow">
             <td>MS Office</td>
-            <td>Excel</td>
+            <td>Excel<br> </td>
             <td>Capable</td>
         </tr>
         <tr>
