--- a/lab10/index.html
+++ b/lab10/index.html
@@ -8,17 +8,27 @@
     <title>Bio</title>
     <link rel="stylesheet" href="styles2.css">
     <style>
-        .copyright {float: left; margin-left: 10px;}
-        .quote {float: right; margin-right: 10px}
-        .biophoto {max-width: 100%;}
+        .copyright {
+            float: left;
+            margin-left: 10px;
+        }
+
+        .quote {
+            float: right;
+            margin-right: 10px
+        }
+
+        .biophoto {
+            max-width: 100%;
+        }
     </style>
 </head>
 
 <body>
     <nav>
-            <a href="index.html">Bio</a> |
-            <a href="skills.html">Skills</a> |
-            <a href="contact.html">Contact</a>
+        <a href="index.html">Bio</a> |
+        <a href="skills.html">Skills</a> |
+        <a href="contact.html">Contact</a>
     </nav>
 
     <header><img class="biophoto" src="../images/biophotoshop.png" alt="James' photo"></header>
