--- a/lab11/skills.html
+++ b/lab11/skills.html
@@ -27,8 +27,8 @@
         }
 
         .other {
-            background-color: #E6D5B8;
-            border: 2px solid #F0A500;
+            background-color: #8B0000;
+            border: 2px solid #FF0000;
             border-radius: 5px;
             padding: 10px;
             flex: 1;
@@ -53,6 +53,8 @@
         #skip:focus {
             left: 10px;
         }
+
+        .difcolor {color: #202A44;}
     </style>
     <link rel="stylesheet" href="styles2.css">
 </head>
@@ -96,7 +98,7 @@
         </div>
         <div class="other">
             <aside>
-                <h2>Other Skills</h2>
+                <h2 class="difcolor">Other Skills</h2>
                 <p>Pyton</p>
                 <p>SQL</p>
                 <p>Windows</p>
