--- a/lab11/contact.html
+++ b/lab11/contact.html
@@ -14,8 +14,8 @@
 
         .row1,
         .row2 {
-            background-color: #E6D5B8;
-            border: 2px solid #E45826;
+            background-color: #8B0000;
+            border: 2px solid #FF0000;
             border-radius: 5px;
             margin: 30px;
         }
