--- a/lab11/skills.html
+++ b/lab11/skills.html
@@ -46,8 +46,9 @@
         #skip {
             position: absolute;
             left: -999px;
-            background-color: orange;
+            background-color: #FF0000;
             padding: 5px;
+            
         }
 
         #skip:focus {
