--- a/lab11/contact.html
+++ b/lab11/contact.html
@@ -37,7 +37,7 @@
         #skip {
             position: absolute;
             left: -999px;
-            background-color: orange;
+            background-color: #FF0000;
             padding: 5px;
         }
 
