--- a/lab11/index.html
+++ b/lab11/index.html
@@ -25,7 +25,7 @@
         #skip {
             position: absolute;
             left: -999px;
-            background-color: orange;
+            background-color: #FF0000;
             padding: 5px;
         }
 
