--- a/lab11/skills.html
+++ b/lab11/skills.html
@@ -24,6 +24,11 @@
             display: flex;
             flex: 3;
             justify-content: space-evenly;
+            padding-top: 60px;
+            background-color: #8B0000;
+            border: 2px solid #FF0000;
+            border-radius: 5px;
+            margin-right: 20px;
         }
 
         .other {
@@ -36,6 +41,7 @@
 
         .flexbox2 {
             display: flex;
+
         }
 
         .description,
@@ -55,7 +61,7 @@
             left: 10px;
         }
 
-        .difcolor {color: #202A44;}
+        .difcolor {color: #ffffff;}
     </style>
     <link rel="stylesheet" href="styles2.css">
 </head>
