--- a/lecturenotes/week13rollover.html
+++ b/lecturenotes/week13rollover.html
@@ -18,7 +18,8 @@
 </head>
 
 <body>
-    <img src="https://laferger.github.io/ist263/images/arrow.PNG" id="rollover" onmouseover="change();" onmouseout="changeBack();">
+    <img src="https://laferger.github.io/ist263/images/arrow.PNG" id="rollover" onmouseover="change();"
+        onmouseout="changeBack();">
 </body>
 
 </html>
