--- a/project7/index.html
+++ b/project7/index.html
@@ -5,25 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="project.css">
+    <link rel="stylesheet" href="project7.css">
     <title>Home</title>
 
     <style>
-        .indexrow1 {
-            display: flex;
-            padding: 10px;
-        }
-
-        .indexrow1column1 {
-            display: flex;
-            justify-content: flex-start;
-        }
-
-        .indexrow1column2 {
-            display: flex;
-            justify-content: center;
-        }
-
         .indexrow2 {
             display: flex;
             justify-content: center;
@@ -46,17 +31,22 @@
             display: flex;
             justify-content: center;
             color: navy;
-            padding-bottom: 10px;
+            padding-bottom: 30px;
+        }
+
+        #form {
+            font-size: 20px;
+            line-height: 30px;
         }
     </style>
 </head>
 
 <body>
-    <div class="indexrow1">
-        <div class="indexrow1column1">
-            <header><img class="logo" src="logo.png" alt="In The Works Logo"></header>
+    <div class="row1">
+        <div class="row1column1">
+            <header><img id="logo" src="logo.2.png" alt="In The Works Logo"></header>
         </div>
-        <div class="indexrow1column2">
+        <div class="row1column2">
             <a href="#content" id="skip">Skip to Content</a>
             <a href="index.html">Home</a> |
             <a href="about.html">About</a> |
@@ -65,14 +55,14 @@
     </div>
 
     <div class="indexrow2">
-        <iframe class="featurevideo" width="956.6" height="522" src="https://www.youtube.com/embed/TezGYzxRTNg" title="YouTube video player"
-            frameborder="0"
+        <iframe class="featurevideo" width="956.6" height="522" src="https://www.youtube.com/embed/TezGYzxRTNg"
+            title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
     </div>
 
     <div class="indexrow3">
-        <h2 class="companyslogan">"You will be blown away by their quality of work"</h2>
+        <h2 class="companyslogan">"You will be blown away by their quality of work..."</h2>
     </div>
 
     <hr>
@@ -82,7 +72,6 @@
             <h2>Contact Form</h2>
         </div>
     </div>
-
 
     <div class="indexrow5">
         <div>
@@ -101,9 +90,6 @@
             </form>
         </div>
     </div>
-
-
-
 
     <footer>
         <hr>
